examples/sample-product-chart/chart-test/reports/run-full-bench-20260609-085346/scenario-policy-opa-gatekeeper-required-labels-20260609-100913/artifacts/manifests/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"test-compliant-ingress"},"name":"test-compliant-ingress","namespace":"sample"},"spec":{"ingressClassName":"nginx","rules":[{"host":"test-compliant.local","http":{"paths":[{"backend":{"service":{"name":"sample","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-06-09T14:10:46Z"
    generation: 1
    labels:
      app.kubernetes.io/name: test-compliant-ingress
    name: test-compliant-ingress
    namespace: sample
    resourceVersion: "1112"
    uid: ca051276-c8bc-4ef4-98e9-b6743042f3d9
  spec:
    ingressClassName: nginx
    rules:
    - host: test-compliant.local
      http:
        paths:
        - backend:
            service:
              name: sample
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.96.29.253
kind: List
metadata:
  resourceVersion: ""
