examples/sample-product-chart/chart-test/reports/run-full-bench-20260609-085346/scenario-policy-opa-gatekeeper-required-labels-20260609-100913/artifacts/manifests/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-09T14:10:33Z"
    labels:
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "901"
    uid: b86b2b67-022a-452b-957d-964aa7f7053f
  spec:
    clusterIP: 10.96.120.126
    clusterIPs:
    - 10.96.120.126
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: sample
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
